# ScaleTransform

./: .gitignore  CMakeLists.txt
ScaleTrans/: CMakeLists.txt  DeformableMesh.h  DeformationGradient2d.cpp  DeformationGradient2d.h  DeformedMesh3d.cpp  DeformedMesh3d.h  TriangleMesh.cpp  TriangleMesh.h  main.cpp
